<resources>
    <string name="app_name">Examen_sem3_APM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_registrar">Registrar Transferencia</string>
    <string name="menu_realizar">Realizar Transferencia</string>
    <string name="menu_buscar">Buscar Transferencia</string>
    <string name="menu_preferencias">Preferencias</string>

    <!-- LOGIN -->
    <string name="hintCorreo">Ingrese Correo</string>
    <string name="hintPassword">Ingrese Contraseña</string>
    <string name="textBtnIniciar">Iniciar Sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- FIN LOGIN -->

</resources>