<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_registrar"
            android:icon="@drawable/ic_registrar"
            android:title="@string/menu_registrar" />
        <item
            android:id="@+id/nav_realizar"
            android:icon="@drawable/ic_realizar"
            android:title="@string/menu_realizar" />
        <item
            android:id="@+id/nav_buscar"
            android:icon="@drawable/ic_buscar"
            android:title="@string/menu_buscar" />
        <item
            android:id="@+id/nav_preferencias"
            android:icon="@drawable/ic_preferencias"
            android:title="@string/menu_preferencias" />
    </group>
</menu>