<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/degradado_login"
    tools:context=".Login">
    <LinearLayout
        android:id="@+id/laySuperior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        >
        <!-- logo al medio del linearLayout-->

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="E Corp"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layInferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_margin="20dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layEmail"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_correo"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtCorreo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/hintCorreo"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_weight="3"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layPasswprd"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_password"
                android:layout_weight="1.3"
                />
            <EditText
                android:id="@+id/edtPassword"
                android:layout_weight="3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textBtnIniciar"
        android:textSize="18sp"
        android:layout_margin="15dp"
        android:background="@drawable/efecto_redondeado_btn"
        />

</LinearLayout>